--- a/apps/frontend/modules/sfApply/config/security.yml
+++ b/apps/frontend/modules/sfApply/config/security.yml
@@ -1,4 +1,10 @@
 apply:
   is_secure: false
+confirm:
+  is_secure: false
 resetRequest:
+  is_secure: false
+reset:
+  is_secure: false
+resetCancel:
   is_secure: false
